--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -157,6 +157,8 @@ p.notice{
     .top, .progress_bar{
       width: 100%;
     }
+    .progress_bar{
+      margin-bottom:5px;}
     h2{
       padding:0 0 10px 0; 
       float:left;
@@ -179,6 +181,8 @@ p.notice{
       font-weight:bold; 
       @include text-shadow(white, 0, 1px, 0);}}
   div.reseller{
+    h2{
+      font-size:$font * 1.5}
     .details{
       float:right;}}
   div.order{
